--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             <div class="container">
                 <div class="carousel__slide carousel__slide-2">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6 center">
-                            <img src="./images/Asset 3.png" alt="" class="img-fluid">
+                        <div class="col-sm-12 col-md-5 center">
+                            <img src="./images/Asset 3.png" alt="" class="img-fluid w-50">
                         </div>
-                        <div class="col-sm-12 col-md-6 center-column">
+                        <div class="col-sm-12 col-md-7 center-column">
                             <div class="section ">
                                 <h3 class="section__title">futira coin</h3>
                                 <div class="section__text">
@@ -94,13 +94,13 @@
             <div class="container">
                 <div class="carousel__slide carousel__slide-3">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6 center">
-                            <img src="./images/Asset 4.png" alt="" class="img-fluid">
+                        <div class="col-sm-12 col-md-5 center">
+                            <img src="./images/Asset 4.png" alt="" class="img-fluid w-50">
                         </div>
-                        <div class="col-sm-12 col-md-6 center-column">
+                        <div class="col-sm-12 col-md-7 center-column">
                             <div class="section ">
-                                <h3 class="section__title color-white">the global inventor</h3>
-                                <h5 class="section__subtitle color-white">Dr. Hatim Zaghloul</h5>
+                                <h3 class="section__subtitle color-white">the global inventor</h3>
+                                <h5 class="section__title color-white">Dr. Hatim Zaghloul</h5>
                                 
                                 <div class="section__text p-white">
                                     <p>From the inventor of the high 
@@ -138,10 +138,10 @@
             <div class="container">
                 <div class="carousel__slide carousel__slide-3">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6 center">
-                            <img src="./images/Asset 6.png" alt="" class="img-fluid">
+                        <div class="col-sm-12 col-md-5 center">
+                            <img src="./images/Asset 6.png" alt="" class="img-fluid w-50">
                         </div>
-                        <div class="col-sm-12 col-md-6 center-column">
+                        <div class="col-sm-12 col-md-7 center-column">
                             <div class="section ">
                                 <h3 class="section__title color-white" style="font-size: 80px !important;">INVEST IN <br> FUTURE!</h3>
                             </div>
@@ -154,14 +154,14 @@
     <section class="what section">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-6 center-column">
+                <div class="col-sm-12 col-md-7 center-column">
                     <h3 class="section__title start" style="font-weight:300 ;">FUTIRA COIN</h3>
-                    <div class="section__text">
+                    <div class="section__text p-24 mb-3">
                         <p>More than half the world does not have access to the internet. This is positively correlated with economic growth and has established the digital divide where some people  are connected and others are not.</p>
                     </div>
                     <button class="btn-main large start" id="show-modal-what " data-bs-toggle="modal" data-bs-target="#what-modal"> learn more</button>
                 </div>
-                <div class="col-sm-12 col-md-6 center">
+                <div class="col-sm-12 col-md-5 center">
                     <img src="./images/Futira.gif" alt="" class="img-fluid">
                 </div>
             </div>
@@ -234,14 +234,14 @@
         <section class="background-main center-column min-height-100">
             <div class="container">
                 <div class="row center">
-                    <div class="col-sm-12 col-md-6 center-column">
+                    <div class="col-sm-12 col-md-7 center-column">
                         <h3 class="section__title start color-white" style="font-weight:300 ;">FUTIRA COIN</h3>
-                        <div class="section__text p-white">
+                        <div class="section__text p-24 mb-3 p-white">
                             <p>More than half the world does not have access to the internet. This is positively correlated with economic growth and has established the digital divide where some people  are connected and others are not.</p>
                         </div>
                         <button class="btn-main large start" id="show-modal-what " data-bs-toggle="modal" data-bs-target="#what-modal-2"> learn more</button>
                     </div>
-                    <div class="col-sm-12 col-md-6 center">
+                    <div class="col-sm-12 col-md-5 center">
                         <img src="./images/Asset 14.png" alt="" class="img-fluid">
                     </div>
                 </div>
@@ -536,7 +536,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal">
                         <div class="card">
                             <img src="images/Asset 46.png" class="img-fluid" alt="">
-                            <div class="title py-3 px-4">
+                            <div class="title py-3 px-3">
                                 <h4 class="mb-0">JOHAN</h4>
                                 <p class="mb-0">DIRECTOR OF FUTIRA S.R.O.</p>
                             </div>
@@ -547,7 +547,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal">
                         <div class="card">
                             <img src="images/Asset 49.png" class="img-fluid" alt="">
-                            <div class="title py-3 px-4">
+                            <div class="title py-3 px-3">
                                 <h4 class="mb-0">ABDULRHMAN</h4>
                                 <p class="mb-0">FUTIRA PROJECT MANAGER</p>
                             </div>
@@ -558,7 +558,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal">
                         <div class="card">
                             <img src="images/Asset 52.png" class="img-fluid" alt="">
-                            <div class="title py-3 px-4">
+                            <div class="title py-3 px-3">
                                 <h4 class="mb-0">MOHAMED</h4>
                                 <p class="mb-0">CHIEF OF E&D DEPARTMENT</p>
                             </div>
@@ -569,7 +569,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal">
                         <div class="card">
                             <img src="images/Asset 55.png" class="img-fluid" alt="">
-                            <div class="title py-3 px-4">
+                            <div class="title py-3 px-3">
                                 <h4 class="mb-0">ISLAM</h4>
                                 <p class="mb-0">SOFTWARE SOLUTIONS ARCHITECT</p>
                             </div>
@@ -580,7 +580,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal">
                         <div class="card">
                             <img src="images/Asset 58.png" class="img-fluid" alt="">
-                            <div class="title py-3 px-4">
+                            <div class="title py-3 px-3">
                                 <h4 class="mb-0">ISLAM</h4>
                                 <p class="mb-0">SOFTWARE SOLUTIONS ARCHITECT</p>
                             </div>
@@ -588,6 +588,9 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="side-word">
+            <img src="images/who.png" class="" alt="">
         </div>
         <div class="section modal who-modal fade p-5" id="who-modal" tabindex="-1" aria-labelledby="modal-title"
             aria-hidden="true">
@@ -633,7 +636,7 @@
     </div>
     <section class="where position-relative background-main-dark">
         <div class="side-word">
-            <img src="images/where_en.png" alt="">
+            <img src="images/where_en.png" class="w-50" alt="">
         </div>
         <div class="container d-flex justify-content-between flex-column min-height-100 ">
             <div class="row p-3">
@@ -1074,8 +1077,8 @@
 
                 </div>
             </div>
-            <div class="why-position">
-                <img src="images/why-position.png" class="w-75" alt="">
+            <div class="side-word">
+                <img src="images/why-position.png" class="w-100" alt="">
             </div>
         </div>
     </div>
