--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
         </div>
         <div class="container">
-            <div class=" section modal fade p-5" id="what-modal" tabindex="-1"  aria-labelledby="modal-title" aria-hidden="true">
+            <div class=" section modal overlay-main fade p-5" id="what-modal" tabindex="-1"  aria-labelledby="modal-title" aria-hidden="true">
                 <div class="modal-dialog what__modal modal-dialog-centered modal-xl">
                     <div class="modal-content what__modal__content">
                         <div class="modal-header">
@@ -246,16 +246,16 @@
                     </div>
                 </div>
             </div>
-            <div class=" section modal fade p-5" id="what-modal-2" tabindex="-1"  aria-labelledby="modal-title" aria-hidden="true">
+            <div class=" section modal overlay-main fade p-5" id="what-modal-2" tabindex="-1"  aria-labelledby="modal-title" aria-hidden="true">
                 <div class="modal-dialog what__modal modal-dialog-centered modal-xl">
-                    <div class="modal-content what__modal__content">
+                    <div class="modal-content what__modal__content ">
                         <div class="modal-header">
                             <h5 id="modal-title"></h5>
                             <button class="what__modal__close" data-bs-dismiss="modal" aria-label="Close"> <i class="fal fa-times"></i> </button>
                         </div>
                         <div class="modal-body ">
                             <div class="row p-4">
-                                <div class="col-sm-12 col-md-4 mb-4">
+                                <div class="col-sm-12 col-md-4 mb-4 ">
                                     <div class="icon-card">
                                         <div class="icon-card__img">
                                             <img src="./images/Asset 15.png" alt="">
@@ -352,19 +352,19 @@
                                     <h5 class="what__cards__item__text__subtitle">Initial Token</h5>
                                     <h4 class="what__cards__item__text__title">Launch</h4>
                                     <button  class="show-modal-what-3" id="show-modal-what-3 " data-bs-toggle="modal" data-bs-target="#what-modal-3"></button>
-                                    <div class=" section modal fade p-4" id="what-modal-3" tabindex="-1"  aria-labelledby="modal-title-3" aria-hidden="true">
-                                        <div class="modal-dialog what__modal modal-dialog-centered modal-xl">
-                                            <div class="modal-content what__modal__content">
+                                    <div class=" section modal overlay-main fade p-4" id="what-modal-3" tabindex="-1"  aria-labelledby="modal-title-3" aria-hidden="true">
+                                        <div class="modal-dialog what__modal  modal-dialog-centered modal-xl">
+                                            <div class="modal-content what__modal__content ">
                                                 <div class="modal-header py-0 pt-3">
                                                     <h5 id="modal-title-3"></h5>
                                                     <button class="what__modal__close" data-bs-dismiss="modal" aria-label="Close"> <i class="fal fa-times"></i> </button>
                                                 </div>
                                                 <div class="modal-body ">
-                                                    <div class="row px-4">
+                                                    <div class="row px-4 py-4">
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 27.png" alt="">
+                                                                    <img src="./images/Asset 27.png" alt="" class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -376,7 +376,7 @@
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 28.png" alt="">
+                                                                    <img src="./images/Asset 28.png" alt=""class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -388,7 +388,7 @@
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 29.png" alt="">
+                                                                    <img src="./images/Asset 29.png" alt=""class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -400,7 +400,7 @@
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 30.png" alt="">
+                                                                    <img src="./images/Asset 30.png" alt=""class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -412,7 +412,7 @@
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 31.png" alt="">
+                                                                    <img src="./images/Asset 31.png" alt=""class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -425,7 +425,7 @@
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 32.png" alt="">
+                                                                    <img src="./images/Asset 32.png" alt=""class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -437,7 +437,7 @@
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 33.png" alt="">
+                                                                    <img src="./images/Asset 33.png" alt=""class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -450,7 +450,7 @@
                                                         <div class="col-sm-12 col-md-3 mb-3">
                                                             <div class="icon-card p-0">
                                                                 <div class="icon-card__img">
-                                                                    <img src="./images/Asset 34.png" alt="">
+                                                                    <img src="./images/Asset 34.png" alt=""class="img-fluid ">
                                                                 </div>
                                                                 <div class="icon-card__text">
                                                                     <p>
@@ -659,7 +659,7 @@
                 <button class="btn-main large" data-bs-toggle="modal" data-bs-target="#where-modal"> learn more</button>
             </div>
         </div>
-        <div class="section modal where-modal fade p-5" id="where-modal" tabindex="-1" aria-labelledby="modal-title"
+        <div class="section modal overlay-main where-modal fade p-5" id="where-modal" tabindex="-1" aria-labelledby="modal-title"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered what__modal modal-dialog-centered modal-xl">
             <div class="modal-content where__modal__content">
@@ -668,14 +668,14 @@
                     <button class="what__modal__close" data-bs-dismiss="modal" aria-label="Close"> <i
                             class="fal fa-times"></i> </button>
                 </div>
-                <div class="modal-body p-0 ">
+                <div class="modal-body  ">
                     <div class="row">
-                        <div class="col-ms-12 col-md-12 col-lg-5 center">
+                        <div class="col-ms-12 col-md-12 col-lg-4 center">
                             <img src="images/Asset 41.png" class="img-fluid" alt="">
                         </div>
-                        <div class="col-ms-12 col-md-12 col-lg-7 center">
-                            <div class="section__text p-18 p-main">
-                                <p class="mt-2 me-4">
+                        <div class="col-ms-12 col-md-12 col-lg-8 center">
+                            <div class="section__text p-18  p-2 pt-6 p-main p-nor">
+                                <p class="">
                                     This is not getting better through the introduction of the 
                                     traditional generations of mobile telephones. The reason 
                                     is simple: the infrastructure is expensive. The main 
