--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                     <span class="where__num__text">OF AFRICA DOES NOT HAVE INTERNE</span>
                 </div>
             </div>
-            <div class="where__text">
+            <div class="where__text p-18">
                 <p>
                     A quick glance at the utilization of mobile telephony 
                     around the globe shows that almost half the world 
