add section media

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-xs-12">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal" data-bs-toggle="modal" data-bs-target="#who-modal">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal">
                         <div class="card">
                             <img src="images/Asset 40.png" class="img-fluid" alt="">
                             <div class="title py-3 px-4">
@@ -1082,7 +1082,109 @@
             </div>
         </div>
     </div>
-
+    <div class="who media py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media1.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-4 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">EXCEPTIONAL TECH INVESTOR
+                                    IN GEORGIA</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media2.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-4 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">ICICB AND GAABU INVEST IN FUTIRA COIN</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media3.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-3 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">COOPERATE WITH BTU</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media4.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-3 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">BTU HOSTS WIFI AND
+                                    WIMAX INVENTOR</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media5.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-3 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">SOLVING THE
+                                    GLOBAL DIGITAL DIVIDE</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media6.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-3 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">SOLVING THE
+                                    GLOBAL DIGITAL DIVIDE</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media7.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-4 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">EXCEPTIONAL TECH INVESTOR
+                                    IN GEORGIA</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <a href="#">
+                        <div class="card">
+                            <img src="images/media8.png" class="img-fluid" alt="">
+                            <div class="title py-3 px-4 d-flex justify-content-between align-items-center">
+                                <h4 class="mb-0">"I AM GOING TO COOPERATE WITH THE
+                                    UNIVERSITY OF BUSINESS AND TECHNOLOGY"</h4>
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="side-word">
+            <img src="images/media.png" class="w-100" alt="">
+        </div>
+    </div>
     <script src="js/pro.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
