--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                 <div class="carousel__slide carousel__slide-1">
                     <img src="./images/phone.png" alt="" class="img-fluid">
                     <div class="carousel__slide__date carousel__slide_date-day">
-                        <span class="carousel__slide__date__count"> 19 </span>
+                        <span class="carousel__slide__date__count" id="day"> 19 </span>
                         <span class="carousel__slide__date__seprator"></span>
-                        <span class="carousel__slide__date__label">days </span>
+                        <span class="carousel__slide__date__label" >days </span>
                     </div> 
                     <div class="carousel__slide__date carousel__slide_date-day">
-                        <span class="carousel__slide__date__count"> 14 </span>
+                        <span class="carousel__slide__date__count" id="hour"> 14 </span>
                         <span class="carousel__slide__date__seprator"></span>
                         <span class="carousel__slide__date__label">hours </span>
                     </div> 
                     <div class="carousel__slide__date carousel__slide_date-day">
-                        <span class="carousel__slide__date__count"> 25 </span>
+                        <span class="carousel__slide__date__count " id="minute"> 25 </span>
                         <span class="carousel__slide__date__seprator"></span>
                         <span class="carousel__slide__date__label">Minutes </span>
                     </div> 
